--- a/src/assets/prefix/drawer.less
+++ b/src/assets/prefix/drawer.less
@@ -7,7 +7,7 @@
 
   &.drawer_show_md{
     top: var(--header-height);
-    @apply md:sticky md:h-dvh md:w-auto md:visible py-2;
+    @apply md:sticky md:h-dvh md:w-auto md:visible py-2 md:z-0;
     .drawer_content{
       @apply md:sticky md:transform-none ;
       .drawer_content_header{
