--- a/src/assets/prefix/button.less
+++ b/src/assets/prefix/button.less
@@ -1,15 +1,18 @@
+
+
 .btn_ {
 
-  --btn-background: theme("colors.default");
+  --btn-background: theme("colors.default-100");
   --btn-light-color: theme("colors.default-800");
-  --btn-hover-bg: theme("colors.default-300");
-  --btn-color: theme("colors.default-800");
+  --btn-hover-bg: hsl(var(--nexlink-default) / .1);
+  --btn-color: theme("colors.default-foreground");
   --btn-hover-color: theme("colors.default-800");
   --btn-height: theme("height.10");
   --btn-font-size: theme("fontSize.small");
   --btn-radius: theme("borderRadius.medium");
   --btn-badge-size: 1.5em;
   --btn-line-height: theme("lineHeight.tight");
+
   background: var(--btn-background);
   color: var(--btn-color);
   height: var(--btn-height);
@@ -20,158 +23,34 @@
   @apply px-4  inline-flex select-none items-center justify-center transition-all cursor-pointer appearance-none relative whitespace-nowrap gap-2;
 
   &:disabled , &.btn_disabled{
-  @apply pointer-events-none opacity-60;
+    @apply pointer-events-none opacity-60;
   }
   &:hover{
-  @apply opacity-hover;
+    @apply opacity-hover;
   }
-
-
-  &.btn_bordered{
-    border-color: var(--btn-background);
-    color: var(--btn-background);
-    background-color: transparent;
-  @apply border-medium border-solid;
-  }
-  &.btn_light{
-    color: var(--btn-light-color);
-    background-color: transparent;
-    &:hover{
-      background-color: var(--btn-hover-bg);
-    }
-  }
-  &.btn_flat{
-    color: var(--btn-background);
-    background-color: var(--btn-hover-bg);
-  }
-  &.btn_ghost{
-    border-color: var(--btn-background);
-    color: var(--btn-background);
-    background-color: transparent;
-    @apply border-solid;
-    &:hover{
-      background-color: var(--btn-background);
-      color: var(--btn-color);
-    }
-  @apply border-medium;
-  }
-  &.btn_shadow{
-  @apply shadow-lg shadow-content1;
-  }
-
 
   &.btn_no_hover{
   @apply !px-0;
     --btn-hover-bg: transparent!important;
   }
+
   &.btn_icon{
     width: var(--btn-height);
     @apply aspect-square !px-0 !text-base flex-shrink-0;
   }
+
   &.btn-icon-between{
   @apply !justify-between;
   }
   &.btn_start{
   @apply !justify-start;
   }
-  &.btn_lg {
-    --btn-radius: theme("borderRadius.large");
-    --btn-height: theme("height.12");
-    --btn-font-size: theme("fontSize.medium");
-    --btn-line-height: theme("lineHeight.normal");
 
-    @apply px-6;
-  }
-  &.btn_sm{
-    --btn-radius: theme("borderRadius.small");
-    --btn-height: theme("height.8");
-    --btn-font-size: theme("fontSize.tiny");
-    --btn-line-height: theme("lineHeight.none");
-
-  @apply px-3;
-    &.btn_right_chevron{
-      &:after{
-        width: 16px;
-        height: 16px;
-        background-size: 1rem;
-      }
-    }
-  }
-  &.btn_xs{
-    --btn-radius: theme("borderRadius.small");
-    --btn-height: theme("height.7");
-    --btn-font-size: theme("fontSize.xxs");
-    --btn-badge-size:1.2em;
-    --btn-line-height: theme("lineHeight.none");
-    @apply px-2;
-    &.btn_right_chevron{
-      &:after{
-        width: 16px;
-        height: 16px;
-        background-size: 1rem;
-      }
-    }
-  }
 
   &.btn_blue {
     --btn-background: theme("colors.blue.600");
     --btn-hover-bg: theme("colors.blue.700");
     --btn-color: theme("colors.white");
-  }
-
-  &.btn_primary {
-    --btn-background: theme("colors.primary.600");
-    --btn-light-color: theme("colors.primary.600");
-    --btn-hover-bg: hsl(var(--nexlink-primary) / .2);
-    --btn-color: theme("colors.primary-foreground");
-    --btn-hover-color: theme("colors.white");
-    @apply shadow-primary-400/40;
-  }
-  &.btn_danger {
-    --btn-background: theme("colors.danger");
-    --btn-light-color: theme("colors.danger");
-    --btn-hover-bg: hsl(var(--nexlink-danger) / .2);
-    --btn-color: theme("colors.danger-foreground");
-    --btn-hover-color: theme("colors.white");
-  @apply shadow-danger/40;
-  }
-  &.btn_secondary {
-    --btn-background: theme("colors.secondary");
-    --btn-light-color: theme("colors.secondary");
-    --btn-hover-bg: hsl(var(--nexlink-secondary) / .2);
-    --btn-color: theme("colors.secondary-foreground");
-    --btn-hover-color: theme("colors.white");
-  @apply shadow-secondary/40;
-  }
-  &.btn_warning {
-    --btn-background: theme("colors.warning");
-    --btn-light-color: theme("colors.warning");
-    --btn-hover-bg: hsl(var(--nexlink-warning) / .2);
-    --btn-color: theme("colors.warning-foreground");
-    --btn-hover-color: theme("colors.white");
-  @apply shadow-warning/40;
-  }
-  &.btn_success {
-    --btn-background: theme("colors.success");
-    --btn-light-color: theme("colors.success");
-    --btn-hover-bg: hsl(var(--nexlink-success) / .2);
-    --btn-color: theme("colors.success-foreground");
-    --btn-hover-color: theme("colors.white");
-  @apply shadow-success/40;
-  }
-
-  &.btn_transparent {
-    --btn-background: transparent;
-    --btn-hover-bg: theme("colors.gray.100");
-    --btn-color: theme("colors.gray.800");
-    &.btn_active{
-      --btn-background:  theme("colors.gray.200");
-      --btn-hover-bg: theme("colors.gray.200");
-      --btn-color: theme("colors.gray.800");
-    }
-    &:hover {
-      background: var(--btn-hover-bg);
-    }
   }
 
   &.btn_bho {
@@ -219,4 +98,146 @@
   @apply absolute -right-1 -top-1 text-xxs rounded-xl inline-flex items-center justify-center shadow;
 
   }
+}
+
+.btn_primary {
+  --btn-background: theme("colors.primary.600");
+  --btn-light-color: theme("colors.primary.600");
+  --btn-hover-bg: hsl(var(--nexlink-primary) / .2);
+  --btn-color: theme("colors.primary-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-primary-400/40;
+}
+.btn_danger {
+  --btn-background: theme("colors.danger");
+  --btn-light-color: theme("colors.danger");
+  --btn-hover-bg: hsl(var(--nexlink-danger) / .2);
+  --btn-color: theme("colors.danger-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-danger/40;
+}
+.btn_secondary {
+  --btn-background: theme("colors.secondary");
+  --btn-light-color: theme("colors.secondary");
+  --btn-hover-bg: hsl(var(--nexlink-secondary) / .2);
+  --btn-color: theme("colors.secondary-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-secondary/40;
+}
+.btn_warning {
+  --btn-background: theme("colors.warning");
+  --btn-light-color: theme("colors.warning");
+  --btn-hover-bg: hsl(var(--nexlink-warning) / .2);
+  --btn-color: theme("colors.warning-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-warning/40;
+}
+.btn_success {
+  --btn-background: theme("colors.success");
+  --btn-light-color: theme("colors.success");
+  --btn-hover-bg: hsl(var(--nexlink-success) / .2);
+  --btn-color: theme("colors.success-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-success/40;
+}
+.btn_transparent {
+  --btn-background: transparent;
+  --btn-hover-bg: theme("colors.gray.100");
+  --btn-color: theme("colors.gray.800");
+  &.btn_active{
+    --btn-background:  theme("colors.gray.200");
+    --btn-hover-bg: theme("colors.gray.200");
+    --btn-color: theme("colors.gray.800");
+  }
+  &:hover {
+    background: var(--btn-hover-bg);
+  }
+}
+
+
+.btn_bordered{
+  border-color: var(--btn-background);
+  color: var(--btn-background);
+  background-color: transparent;
+@apply border-medium border-solid;
+}
+.btn_light{
+  color: var(--btn-light-color);
+  background-color: transparent;
+  &:hover{
+    background-color: var(--btn-hover-bg);
+  }
+}
+.btn_flat{
+  color: var(--btn-background);
+  background-color: var(--btn-hover-bg);
+}
+.btn_ghost{
+  border-color: var(--btn-background);
+  color: var(--btn-background);
+  background-color: transparent;
+@apply border-solid;
+  &:hover{
+    background-color: var(--btn-background);
+    color: var(--btn-color);
+  }
+@apply border-medium;
+}
+.btn_shadow{
+@apply shadow-lg shadow-content1;
+}
+
+.btn_lg {
+  --btn-radius: theme("borderRadius.large");
+  --btn-height: theme("height.12");
+  --btn-font-size: theme("fontSize.medium");
+  --btn-line-height: theme("lineHeight.normal");
+
+@apply px-6;
+}
+.btn_sm{
+  --btn-radius: theme("borderRadius.small");
+  --btn-height: theme("height.8");
+  --btn-font-size: theme("fontSize.tiny");
+  --btn-line-height: theme("lineHeight.none");
+
+@apply px-3;
+  &.btn_right_chevron{
+    &:after{
+      width: 16px;
+      height: 16px;
+      background-size: 1rem;
+    }
+  }
+}
+.btn_xs{
+  --btn-radius: theme("borderRadius.small");
+  --btn-height: theme("height.7");
+  --btn-font-size: theme("fontSize.xxs");
+  --btn-badge-size:1.2em;
+  --btn-line-height: theme("lineHeight.none");
+@apply px-2;
+  &.btn_right_chevron{
+    &:after{
+      width: 16px;
+      height: 16px;
+      background-size: 1rem;
+    }
+  }
+}
+
+.btn_rounded_full{
+  --btn-radius: theme("borderRadius.full");
+}
+.btn_rounded_lg{
+  --btn-radius: theme("borderRadius.large");
+}
+.btn_rounded_md{
+  --btn-radius: theme("borderRadius.medium");
+}
+.btn_rounded_sm{
+  --btn-radius: theme("borderRadius.small");
+}
+.btn_rounded_none{
+  --btn-radius: theme("borderRadius.none");
 }
