--- a/src/components/menus/header-hover-menu/index.html
+++ b/src/components/menus/header-hover-menu/index.html
@@ -1,20 +1,20 @@
 <div class="hm-hover-menu">
     <div class="">
-        <h3>Giyim</h3>
+        <h3>Promosyon ürünler</h3>
         <ul class="flex flex-col gap-1 mt-2">
             <li><a href="/pages/category.html">Pantolon</a></li>
             <li><a href="/pages/category.html">Şort</a></li>
         </ul>
     </div>
     <div class="">
-        <h3>Ayakkabı</h3>
+        <h3>Hediyelik ürünler</h3>
         <ul class="flex flex-col gap-1 mt-2">
             <li><a href="/pages/category.html">Günlük Ayakkabı</a></li>
             <li><a href="/pages/category.html">Klasik Ayakkabı</a></li>
         </ul>
     </div>
     <div class="">
-        <h3>Kozmetik</h3>
+        <h3>Kurumsal ürünler</h3>
         <ul class="flex flex-col gap-1 mt-2">
             <li><a href="/pages/category.html">Parfüm</a></li>
             <li><a href="/pages/category.html">Krem</a></li>
