--- a/tailwind.css
+++ b/tailwind.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 .btn_ {
-  --btn-background: theme("colors.default");
+  --btn-background: theme("colors.default-100");
   --btn-light-color: theme("colors.default-800");
-  --btn-hover-bg: theme("colors.default-300");
-  --btn-color: theme("colors.default-800");
+  --btn-hover-bg: hsl(var(--nexlink-default) / 0.1);
+  --btn-color: theme("colors.default-foreground");
   --btn-hover-color: theme("colors.default-800");
   --btn-height: theme("height.10");
   --btn-font-size: theme("fontSize.small");
@@ -27,37 +27,6 @@
 .btn_:hover {
   @apply opacity-hover;
 }
-.btn_.btn_bordered {
-  border-color: var(--btn-background);
-  color: var(--btn-background);
-  background-color: transparent;
-  @apply border-medium border-solid;
-}
-.btn_.btn_light {
-  color: var(--btn-light-color);
-  background-color: transparent;
-}
-.btn_.btn_light:hover {
-  background-color: var(--btn-hover-bg);
-}
-.btn_.btn_flat {
-  color: var(--btn-background);
-  background-color: var(--btn-hover-bg);
-}
-.btn_.btn_ghost {
-  border-color: var(--btn-background);
-  color: var(--btn-background);
-  background-color: transparent;
-  @apply border-solid;
-  @apply border-medium;
-}
-.btn_.btn_ghost:hover {
-  background-color: var(--btn-background);
-  color: var(--btn-color);
-}
-.btn_.btn_shadow {
-  @apply shadow-lg shadow-content1;
-}
 .btn_.btn_no_hover {
   @apply !px-0;
   --btn-hover-bg: transparent!important;
@@ -72,95 +41,10 @@
 .btn_.btn_start {
   @apply !justify-start;
 }
-.btn_.btn_lg {
-  --btn-radius: theme("borderRadius.large");
-  --btn-height: theme("height.12");
-  --btn-font-size: theme("fontSize.medium");
-  --btn-line-height: theme("lineHeight.normal");
-  @apply px-6;
-}
-.btn_.btn_sm {
-  --btn-radius: theme("borderRadius.small");
-  --btn-height: theme("height.8");
-  --btn-font-size: theme("fontSize.tiny");
-  --btn-line-height: theme("lineHeight.none");
-  @apply px-3;
-}
-.btn_.btn_sm.btn_right_chevron:after {
-  width: 16px;
-  height: 16px;
-  background-size: 1rem;
-}
-.btn_.btn_xs {
-  --btn-radius: theme("borderRadius.small");
-  --btn-height: theme("height.7");
-  --btn-font-size: theme("fontSize.xxs");
-  --btn-badge-size: 1.2em;
-  --btn-line-height: theme("lineHeight.none");
-  @apply px-2;
-}
-.btn_.btn_xs.btn_right_chevron:after {
-  width: 16px;
-  height: 16px;
-  background-size: 1rem;
-}
 .btn_.btn_blue {
   --btn-background: theme("colors.blue.600");
   --btn-hover-bg: theme("colors.blue.700");
   --btn-color: theme("colors.white");
-}
-.btn_.btn_primary {
-  --btn-background: theme("colors.primary.600");
-  --btn-light-color: theme("colors.primary.600");
-  --btn-hover-bg: hsl(var(--nexlink-primary) / 0.2);
-  --btn-color: theme("colors.primary-foreground");
-  --btn-hover-color: theme("colors.white");
-  @apply shadow-primary-400/40;
-}
-.btn_.btn_danger {
-  --btn-background: theme("colors.danger");
-  --btn-light-color: theme("colors.danger");
-  --btn-hover-bg: hsl(var(--nexlink-danger) / 0.2);
-  --btn-color: theme("colors.danger-foreground");
-  --btn-hover-color: theme("colors.white");
-  @apply shadow-danger/40;
-}
-.btn_.btn_secondary {
-  --btn-background: theme("colors.secondary");
-  --btn-light-color: theme("colors.secondary");
-  --btn-hover-bg: hsl(var(--nexlink-secondary) / 0.2);
-  --btn-color: theme("colors.secondary-foreground");
-  --btn-hover-color: theme("colors.white");
-  @apply shadow-secondary/40;
-}
-.btn_.btn_warning {
-  --btn-background: theme("colors.warning");
-  --btn-light-color: theme("colors.warning");
-  --btn-hover-bg: hsl(var(--nexlink-warning) / 0.2);
-  --btn-color: theme("colors.warning-foreground");
-  --btn-hover-color: theme("colors.white");
-  @apply shadow-warning/40;
-}
-.btn_.btn_success {
-  --btn-background: theme("colors.success");
-  --btn-light-color: theme("colors.success");
-  --btn-hover-bg: hsl(var(--nexlink-success) / 0.2);
-  --btn-color: theme("colors.success-foreground");
-  --btn-hover-color: theme("colors.white");
-  @apply shadow-success/40;
-}
-.btn_.btn_transparent {
-  --btn-background: transparent;
-  --btn-hover-bg: theme("colors.gray.100");
-  --btn-color: theme("colors.gray.800");
-}
-.btn_.btn_transparent.btn_active {
-  --btn-background: theme("colors.gray.200");
-  --btn-hover-bg: theme("colors.gray.200");
-  --btn-color: theme("colors.gray.800");
-}
-.btn_.btn_transparent:hover {
-  background: var(--btn-hover-bg);
 }
 .btn_.btn_bho {
   @apply text-primary-600 border-2 bg-transparent border-primary-600 border-solid rounded-full;
@@ -199,6 +83,137 @@
   width: var(--btn-badge-size);
   height: var(--btn-badge-size);
   @apply absolute -right-1 -top-1 text-xxs rounded-xl inline-flex items-center justify-center shadow;
+}
+.btn_primary {
+  --btn-background: theme("colors.primary.600");
+  --btn-light-color: theme("colors.primary.600");
+  --btn-hover-bg: hsl(var(--nexlink-primary) / 0.2);
+  --btn-color: theme("colors.primary-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-primary-400/40;
+}
+.btn_danger {
+  --btn-background: theme("colors.danger");
+  --btn-light-color: theme("colors.danger");
+  --btn-hover-bg: hsl(var(--nexlink-danger) / 0.2);
+  --btn-color: theme("colors.danger-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-danger/40;
+}
+.btn_secondary {
+  --btn-background: theme("colors.secondary");
+  --btn-light-color: theme("colors.secondary");
+  --btn-hover-bg: hsl(var(--nexlink-secondary) / 0.2);
+  --btn-color: theme("colors.secondary-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-secondary/40;
+}
+.btn_warning {
+  --btn-background: theme("colors.warning");
+  --btn-light-color: theme("colors.warning");
+  --btn-hover-bg: hsl(var(--nexlink-warning) / 0.2);
+  --btn-color: theme("colors.warning-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-warning/40;
+}
+.btn_success {
+  --btn-background: theme("colors.success");
+  --btn-light-color: theme("colors.success");
+  --btn-hover-bg: hsl(var(--nexlink-success) / 0.2);
+  --btn-color: theme("colors.success-foreground");
+  --btn-hover-color: theme("colors.white");
+  @apply shadow-success/40;
+}
+.btn_transparent {
+  --btn-background: transparent;
+  --btn-hover-bg: theme("colors.gray.100");
+  --btn-color: theme("colors.gray.800");
+}
+.btn_transparent.btn_active {
+  --btn-background: theme("colors.gray.200");
+  --btn-hover-bg: theme("colors.gray.200");
+  --btn-color: theme("colors.gray.800");
+}
+.btn_transparent:hover {
+  background: var(--btn-hover-bg);
+}
+.btn_bordered {
+  border-color: var(--btn-background);
+  color: var(--btn-background);
+  background-color: transparent;
+  @apply border-medium border-solid;
+}
+.btn_light {
+  color: var(--btn-light-color);
+  background-color: transparent;
+}
+.btn_light:hover {
+  background-color: var(--btn-hover-bg);
+}
+.btn_flat {
+  color: var(--btn-background);
+  background-color: var(--btn-hover-bg);
+}
+.btn_ghost {
+  border-color: var(--btn-background);
+  color: var(--btn-background);
+  background-color: transparent;
+  @apply border-solid;
+  @apply border-medium;
+}
+.btn_ghost:hover {
+  background-color: var(--btn-background);
+  color: var(--btn-color);
+}
+.btn_shadow {
+  @apply shadow-lg shadow-content1;
+}
+.btn_lg {
+  --btn-radius: theme("borderRadius.large");
+  --btn-height: theme("height.12");
+  --btn-font-size: theme("fontSize.medium");
+  --btn-line-height: theme("lineHeight.normal");
+  @apply px-6;
+}
+.btn_sm {
+  --btn-radius: theme("borderRadius.small");
+  --btn-height: theme("height.8");
+  --btn-font-size: theme("fontSize.tiny");
+  --btn-line-height: theme("lineHeight.none");
+  @apply px-3;
+}
+.btn_sm.btn_right_chevron:after {
+  width: 16px;
+  height: 16px;
+  background-size: 1rem;
+}
+.btn_xs {
+  --btn-radius: theme("borderRadius.small");
+  --btn-height: theme("height.7");
+  --btn-font-size: theme("fontSize.xxs");
+  --btn-badge-size: 1.2em;
+  --btn-line-height: theme("lineHeight.none");
+  @apply px-2;
+}
+.btn_xs.btn_right_chevron:after {
+  width: 16px;
+  height: 16px;
+  background-size: 1rem;
+}
+.btn_rounded_full {
+  --btn-radius: theme("borderRadius.full");
+}
+.btn_rounded_lg {
+  --btn-radius: theme("borderRadius.large");
+}
+.btn_rounded_md {
+  --btn-radius: theme("borderRadius.medium");
+}
+.btn_rounded_sm {
+  --btn-radius: theme("borderRadius.small");
+}
+.btn_rounded_none {
+  --btn-radius: theme("borderRadius.none");
 }
 .drawer_ {
   z-index: 99999;
@@ -264,6 +279,156 @@
   z-index: 0;
   @apply bg-default-800/40 w-full h-full top-0 left-0 absolute;
 }
+.tabs_ {
+  @apply inline-flex flex-col items-start;
+}
+.tabs_ .tab_list {
+  @apply flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-200 rounded-large;
+}
+.tabs_ .tab_list.tl_center {
+  @apply items-center justify-center mx-auto;
+}
+.tabs_ .tab_list.tl_white .tab_item {
+  --btn-light-color: #fff;
+}
+.tabs_ .tab_list.tl_rounded_full {
+  @apply rounded-full;
+}
+.tabs_ .tab_list.tl_rounded_full .tab_item {
+  @apply btn_rounded_full;
+}
+.tabs_ .tab_list.tl_light {
+  @apply bg-transparent;
+}
+.tabs_ .tab_list.tl_underlined {
+  @apply bg-transparent;
+}
+.tabs_ .tab_list.tl_underlined .tab_item {
+  @apply !bg-transparent border-b-2 border-solid border-transparent btn_rounded_none opacity-70;
+}
+.tabs_ .tab_list.tl_underlined .tab_item.active {
+  color: var(--btn-light-color) !important;
+  border-color: var(--btn-light-color);
+  @apply opacity-100;
+}
+.tabs_ .tab_list.tl_primary {
+  @apply bg-primary-500/20;
+}
+.tabs_ .tab_list.tl_primary .tab_item {
+  @apply btn_primary;
+}
+.tabs_ .tab_list .tab_item {
+  @apply btn_ btn_rounded_md;
+}
+.tabs_ .tab_list .tab_item:not(.active) {
+  @apply btn_light;
+}
+.tabs_ .tab_content {
+  @apply p-4;
+}
+.tabs_ .tab_content .tab_ {
+  @apply hidden;
+}
+.tabs_ .tab_content .tab_.active {
+  @apply block;
+}
+.bottom_sheet_ {
+  --opacity-bg: 1;
+  z-index: 99999;
+  @apply fixed top-full h-dvh left-0 w-full transition-all;
+}
+.bottom_sheet_ .bs_content {
+  @apply absolute z-20 h-12 left-0 bottom-0 w-full flex flex-col overflow-hidden bg-white rounded-t-xl shadow-small border-t border-solid border-default-100;
+}
+.bottom_sheet_ .bs_content .bs_header {
+  @apply min-h-14 h-14 flex items-center justify-between shadow-small bg-white px-4 cursor-n-resize;
+}
+.bottom_sheet_ .bs_content .bs_header .bsh_title {
+  @apply text-lg font-medium text-default-700 mb-0;
+}
+.bottom_sheet_ .bs_content .bs_header:before {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 36px;
+  height: 4px;
+  top: calc(8px + env(safe-area-inset-top));
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 2px;
+  background-color: rgba(0, 0, 0, 0.14);
+}
+.bottom_sheet_ .bs_content .bs_body {
+  @apply p-4 overflow-auto flex-1 min-h-20;
+}
+.bottom_sheet_ .bs_content .bs_body .bsb_menu {
+  @apply flex flex-col gap-2;
+}
+.bottom_sheet_ .bs_content .bs_body .bsb_menu li {
+  @apply h-14 px-3 bg-default-200/40 rounded-xl flex items-center justify-between cursor-pointer;
+}
+.bottom_sheet_ .bs_content .bs_body .bsb_menu li.bsb_selected:after {
+  @apply bg-primary-500 border-primary-400;
+}
+.bottom_sheet_ .bs_content .bs_body .bsb_menu li:after {
+  content: "";
+  @apply w-5 h-5 inline-block border border-default-400 border-solid rounded-full;
+}
+.bottom_sheet_.bottom_sheet_show {
+  @apply top-auto;
+}
+.bottom_sheet_.bottom_sheet_open {
+  @apply top-0;
+}
+.bottom_sheet_.bottom_sheet_open:after {
+  @apply block;
+}
+.bottom_sheet_:after {
+  content: "";
+  opacity: var(--opacity-bg);
+  @apply fixed top-0 left-0 h-full w-full bg-black/80 hidden;
+}
+@layer components {
+  .card_ {
+    @apply shadow-small p-4 rounded-large bg-white;
+  }
+  .card_gradiant_zinc {
+    @apply bg-gradient-to-l to-transparent from-zinc-100;
+  }
+}
+.Sa_delivery {
+  @apply flex flex-col gap-5;
+}
+.Sa_delivery .Sad_item .Sad_title {
+  @apply text-xl font-semibold;
+}
+.Sa_delivery .Sad_item .Sad_item_list {
+  @apply grid grid-cols-2 gap-3 mt-2;
+}
+.Sa_delivery .Sad_item .Sad_item_list .Sadi_content {
+  @apply flex gap-1 cursor-pointer card_ items-center;
+}
+.Sa_delivery .Sad_item .Sad_item_list .Sadi_content.Sadi_content_add svg {
+  @apply text-primary-600;
+}
+.Sa_delivery .Sad_item .Sad_item_list .Sadi_content.Sadi_content_add span {
+  @apply leading-6;
+}
+.Sa_delivery .Sad_item .Sad_item_list .Sadi_content .Sadi_input {
+  @apply flex items-center h-5;
+}
+.Sa_delivery .Sad_item .Sad_item_list .Sadi_content .Sadi_input input {
+  @apply w-5 h-5;
+}
+.Sa_delivery .Sad_item .Sad_item_list .Sadi_content .Sadi_label {
+  @apply ms-2 text-sm;
+}
+.Sa_delivery .Sad_item .Sad_item_list .Sadi_content .Sadi_label span {
+  @apply font-semibold text-gray-700;
+}
+.Sa_delivery .Sad_item .Sad_item_list .Sadi_content .Sadi_label p {
+  @apply text-xs font-normal text-gray-500 line-clamp-1;
+}
 :root {
   --primary: #d9be5c;
   --max-mobile-width: 640px;
@@ -272,6 +437,9 @@
   --divider: #dcdcdc;
   --overlay: #888;
   --header-height: 0px;
+}
+body {
+  @apply overflow-y-scroll;
 }
 /*
 @media (prefers-color-scheme: dark) {
@@ -1220,7 +1388,7 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
   @apply flex gap-3;
 }
 .checkout-page {
-  @apply flex md:flex-row flex-col relative;
+  @apply flex md:flex-row flex-col max-w-6xl mx-auto relative;
 }
 .checkout-page .cp-overlay {
   @apply hidden;
@@ -1242,16 +1410,28 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
   @apply fixed top-0 left-0 bg-black/50 w-full h-full block z-10 md:hidden;
 }
 .checkout-page .cp-delivery {
-  @apply flex-1 pb-24 md:pb-0 md:h-screen flex flex-col justify-center items-center overflow-auto;
+  @apply flex-1 pb-24 md:pb-0 md:h-screen flex flex-col items-center overflow-auto;
 }
 .checkout-page .cp-delivery .cpd-content {
-  @apply max-w-2xl mx-auto px-3;
+  @apply w-full md:py-5 md:px-12;
 }
 .checkout-page .cp-delivery .cpd-logo {
   @apply w-full;
 }
+.checkout-page .cp-delivery .cpd-logo .cpd-logo-content {
+  @apply flex justify-between items-center flex-col-reverse md:flex-row bg-white md:h-32 py-6 md:py-0 mb-3;
+}
+.checkout-page .cp-delivery .cpd-logo .cpd-logo-content .cpd-logo-link {
+  @apply block h-16;
+}
 .checkout-page .cp-delivery .cpd-form {
+  @apply w-full max-w-2xl px-3 md:px-0;
+}
+.checkout-page .cp-delivery .cpd-form .tabs_ {
   @apply w-full;
+}
+.checkout-page .cp-delivery .cpd-form .tabs_ .tab_content {
+  @apply w-full px-0 py-6;
 }
 .checkout-page .cp-delivery .cpd-title {
   @apply text-gray-700 font-medium mb-2;
@@ -1269,7 +1449,10 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
   @apply rotate-180;
 }
 .checkout-page .cp-order-summary {
-  @apply w-full md:w-[300px] lg:w-[350px] bg-gray-50 sticky md:top-0   flex-col h-screen hidden md:flex pb-20 md:pb-0 opacity-0 md:opacity-100 transition transition-all;
+  @apply w-full md:w-[300px] lg:w-[350px] md:h-[calc(100vh-2rem)] h-screen sticky md:top-4  pb-20 md:pb-0 opacity-0 md:opacity-100 transition-all;
+}
+.checkout-page .cp-order-summary .cpos_content {
+  @apply rounded-t-large rounded-b-none md:rounded-b-large card_ p-0 h-full w-full flex flex-col;
 }
 .checkout-page .cp-order-summary .cp-os-total {
   @apply py-2 md:py-5 text-center flex  flex-col md:gap-3 border-b border-gray-200 border-solid w-full;
@@ -1284,13 +1467,13 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
   @apply text-s text-gray-500 hidden md:block;
 }
 .checkout-page .cp-order-summary .cp-os-summary {
-  @apply py-2 md:py-5 flex flex-col flex-1 overflow-auto;
+  @apply flex flex-col flex-1 overflow-auto;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-title {
-  @apply text-m text-gray-600 font-medium mb-2 px-3;
+  @apply text-m text-gray-600 font-medium px-3 py-2;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-product {
-  @apply flex flex-col gap-1 mt-1 px-3 border-t border-solid border-default-200 pt-3;
+  @apply flex flex-col gap-1 mt-1 px-3 border-t border-solid border-default-200 py-3;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-product.cp-oss-list {
   @apply mt-0 flex-1 overflow-auto;
@@ -1299,22 +1482,22 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
   @apply !text-xs;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item {
-  @apply flex justify-between items-center bg-gray-100 rounded-xl px-3 py-2;
+  @apply flex justify-between items-center card_ p-3;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item.cp-oss-item-total {
   @apply bg-transparent;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item.cp-oss-item-total .cp-oss-left span {
-  @apply font-semibold text-base text-gray-900;
+  @apply font-semibold text-sm text-gray-900;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item.cp-oss-item-total .cp-oos-item-amount {
-  @apply text-gray-900 text-m;
+  @apply text-gray-900 text-sm;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item .cp-oss-left {
   @apply flex flex-col;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item .cp-oss-left h2 {
-  @apply font-medium text-gray-900 gap-1 line-clamp-1;
+  @apply font-medium text-m text-gray-900 gap-1 line-clamp-1;
 }
 .checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item .cp-oss-left span {
   @apply text-sm text-gray-500 line-clamp-1;
@@ -1323,7 +1506,7 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
   @apply text-s text-gray-500 font-medium;
 }
 .order-result-page {
-  @apply bg-gray-50 rounded-xl py-5 px-3;
+  @apply card_;
 }
 .order-result-page .orp-message {
   @apply flex flex-col text-center items-center justify-center border-b border-solid border-gray-100 pb-5 mb-5;
