--- a/src/assets/prefix/checkout.less
+++ b/src/assets/prefix/checkout.less
@@ -5,7 +5,7 @@
     @apply text-xl font-semibold;
     }
     .Sad_item_list{
-    @apply grid grid-cols-2 gap-3 mt-2;
+    @apply grid  sm:grid-cols-2 gap-3 mt-2;
       .Sadi_content{
         @apply flex gap-1 cursor-pointer card_ items-center;
         &.Sadi_content_add{
