--- a/tailwind.less
+++ b/tailwind.less
@@ -1069,7 +1069,7 @@ header{
     }
   }
   .cp-order-summary{
-    @apply ~"w-full md:w-[300px] lg:w-[350px] md:h-[calc(100vh-2rem)]" h-screen sticky md:top-4  pb-20 md:pb-0 opacity-0 md:opacity-100 transition-all;
+    @apply ~"w-full md:w-[300px] lg:w-[350px] md:h-[calc(100vh-2rem)]" h-screen sticky md:top-4 hidden md:flex  pb-20 md:pb-0 opacity-0 md:opacity-100 transition-all;
     .cpos_content{
       @apply rounded-t-large rounded-b-none md:rounded-b-large card_ p-0 h-full w-full flex flex-col;
     }
